buggy_database20250419_134449/security_fix_27a1a1e_80aff6670fb8/commit_info.txt
Commit Hash: 27a1a1e2e47d6f12a784413c194a94b6c0d7fdcb
Subject: drm/xe: stringify the argument to avoid potential vulnerability


Security Keywords:
- vulnerability

Full commit message:
drm/xe: stringify the argument to avoid potential vulnerability

This error gets printed inside a sandbox with warnings turned on.

/mnt/host/source/src/third_party/kernel/v5.15/drivers/
gpu/drm/xe/xe_gt_idle_sysfs.c:87:26: error: format string is
not a string literal (potentially insecure) [-Werror,-Wformat-security]
        return sysfs_emit(buff, gtidle->name);
                                ^~~~~~~~~~~~
/mnt/host/source/src/third_party/kernel/v5.15/drivers/
gpu/drm/xe/xe_gt_idle_sysfs.c:87:26: note: treat the string
as an argument to avoid this
        return sysfs_emit(buff, gtidle->name);
                                ^
                                "%s",
1 error generated.

CC: Rodrigo Vivi <rodrigo.vivi@intel.com>
Signed-off-by: Carlos Santa <carlos.santa@intel.com>
Reviewed-by: Rodrigo Vivi <rodrigo.vivi@intel.com>
Signed-off-by: Rodrigo Vivi <rodrigo.vivi@intel.com>

Metadata:
Author: Carlos Santa <carlos.santa@intel.com>
Author Date: Thu Oct 26 15:01:27 2023 -0700
Committer: Rodrigo Vivi <rodrigo.vivi@intel.com>
Commit Date: Thu Dec 21 11:43:33 2023 -0500

Files Changed: 1
Lines Added: 1
Lines Removed: 1
Total Changes: 2
